<resources>
    <string name="app_name">City App</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="Total">Total</string>
    <string name="StudentsRoot">students_collection</string>



    <!-- Contact -->
    <string name="contact">
    যোগাযোগ

    ১০৩ বিআইডিসি রোড, খালিশপুর
    খুলনা

    মোবাইল - +880 1750 154 334
    ইমেইল - info@cpik.ac.bd

</string>


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading...</string>
    <string name="Student_Type">You Have Added </string>
    <string name="Student_Type1">students in total, if u want keep this class record then press YES , To Delete this Record Press NO </string>
    <string name="title_activity_teachers__profile__panel">Teacher Panel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teachers__panel">Teachers Panel</string>
    <string name="btn_logout_from_account">Sign Out</string>
    <string name="title_activity_general_user__profile">Student Panel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="Root_URL">http://192.168.0.106/CPIK_APIs/</string>
    <string name="attendance"> </string>
    <string name="menu_students">Student Panel</string>
    <string name="menu_teacher">Teachers Panel</string>
    <string name="menu_visit_cpik_web">Visit Us</string>
    <string name="menu_profile">Profile</string>
    <string name="take_attendance">Enter Class Room</string>
    <string name="menu_exit">Exit</string>
    <string name="editalreadytakenattendance">Edit Already Taken Attendance</string>
    <string name="view_attendance_book">View Attendance Book</string>
    <string name="get_single_student_query_report">Get Single Student Query Report</string>
    <string name="begin_class">Begin Class</string>
    <string name="get_class_report">Get Class Report</string>


</resources>
