<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/nav_drawer_blue_theam_color"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_prfile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_visit"
            android:icon="@drawable/ic_round_world"
            android:titleCondensed="@string/app_name"
            android:title="@string/menu_visit_cpik_web" />



    </group>
    <group android:checkableBehavior="none" android:menuCategory="system" >



        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/btn_logout_from_account" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
    </group>

</menu>
